add lombok for getters and setters + cleanup (#388)